test/tests/operators/from_udp/validation/error_endpoint_requires_host_port.txt
error: invalid UDP endpoint
 --> tests/operators/from_udp/validation/error_endpoint_requires_host_port.tql:5:10
  |
5 | from_udp "127.0.0.1"
  |          ^^^^^^^^^^^ expected a host and port string of the form "<host>:<port>"
  |
